Fix  Pre-Header email address bug
- index.html
   - Adjusted grid for Pre-Header to prevent email address spilling
onto two lines.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ nav a {
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 200px;
+    min-height: 400px;
     transition: all 7s ease-in-out;
     -moz-transition: all 7s ease-in-out;
     -webkit-transition: all 7s ease-in-out;    
